force-app/core/main/default/objects/Account/fields/intermediate_beds__c.field-meta.xml
<CustomField>
    <fullName>intermediate_beds__c</fullName>
    <label>intermediate_beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>