force-app/core/main/default/objects/Account/fields/Is_Chopra_s_Personal_Record__c.field-meta.xml
<CustomField>
    <fullName>Is_Chopra_s_Personal_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Chopra&apos;s Personal Record ?</label>
    <type>Checkbox</type>
</CustomField>