force-app/core/main/default/objects/Account/fields/isAbstractValidated__c.field-meta.xml
<CustomField>
    <fullName>isAbstractValidated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the record has been passed through abstract API for phone number validation</description>
    <label>Abstract Validated</label>
    <type>Checkbox</type>
</CustomField>