force-app/core/main/default/objects/Account/fields/isAddedToCamp__c.field-meta.xml
<CustomField>
    <fullName>isAddedToCamp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAddedToCamp</label>
    <type>Checkbox</type>
</CustomField>