force-app/core/main/default/objects/Account/fields/last_survey_date__c.field-meta.xml
<CustomField>
    <fullName>last_survey_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>last_survey_date</label>
    <type>Date</type>
</CustomField>