force-app/core/main/default/objects/Account/fields/Level_of_Access__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Access__c</fullName>
    <label>Level of Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Access</fullName>
            </value>
            <value>
                <fullName>Limited Access - Telehealth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>