force-app/core/main/default/objects/Account/fields/license_status__c.field-meta.xml
<CustomField>
    <fullName>license_status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>license_status</label>
    <length>254</length>
    <type>Text</type>
</CustomField>