force-app/core/main/default/objects/Account/fields/licensee_id__c.field-meta.xml
<CustomField>
    <fullName>licensee_id__c</fullName>
    <label>licensee_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>