force-app/core/main/default/objects/Account/fields/LInkedin_weblink__c.field-meta.xml
<CustomField>
    <fullName>LInkedin_weblink__c</fullName>
    <description>The URL for the LinkedIn Company Page</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>please copy the URL ( web link) of the linkedIn page for the company</inlineHelpText>
    <label>LInkedin_weblink</label>
    <type>Url</type>
</CustomField>