force-app/core/main/default/objects/Account/fields/Main_Representative__c.field-meta.xml
<CustomField>
    <fullName>Main_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the account representative who is the Liasion with the vendor company</description>
    <inlineHelpText>Name of the account representative who is the Liasion with the vendor company</inlineHelpText>
    <label>Main Representative</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Vendor Rep Contact)</relationshipLabel>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>