force-app/core/main/default/objects/Account/fields/Marital_Status_pc__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status_pc__c</fullName>
    <label>EHR Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Aned</fullName>
            </value>
            <value>
                <fullName>Cohabitation</fullName>
            </value>
            <value>
                <fullName>Common Law</fullName>
            </value>
            <value>
                <fullName>Domestic Partner</fullName>
            </value>
            <value>
                <fullName>Inteflocutory</fullName>
            </value>
            <value>
                <fullName>Legally Separated</fullName>
            </value>
            <value>
                <fullName>Separated</fullName>
            </value>
            <value>
                <fullName>Interlocutory</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Registered domestic partner</fullName>
            </value>
            <value>
                <fullName>Unmarried</fullName>
            </value>
            <value>
                <fullName>Unreported</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>