force-app/core/main/default/objects/Account/fields/Medical_Director__c.field-meta.xml
<CustomField>
    <fullName>Medical_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related contact such as  Dialysis center Medical Director who is already part of another entity</description>
    <inlineHelpText>please add the name of the medical director or other director if he is not an employee of the organization</inlineHelpText>
    <label>Medical Director Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>