force-app/core/main/default/objects/Account/fields/Medical_Director_Contact_formula__c.field-meta.xml
<CustomField>
    <fullName>Medical_Director_Contact_formula__c</fullName>
    <formula>IF(NOT(ISBLANK(TEXT(Medical_Director__r.Salutation))), TEXT(Medical_Director__r.Salutation) &amp; &quot; &quot;, &quot;&quot;)&amp;
Medical_Director__r.FirstName &amp; &quot; &quot; &amp;
IF(NOT(ISBLANK(Medical_Director__r.MiddleName)), Medical_Director__r.MiddleName &amp; &quot; &quot;  , &quot;&quot;)&amp;
Medical_Director__r.LastName &amp; &quot; &quot; &amp;
IF(NOT(ISBLANK(Medical_Director__r.Suffix)), Medical_Director__r.Suffix, &quot;&quot;)</formula>
    <label>Medical Director Contact (formula)</label>
    <type>Text</type>
</CustomField>