force-app/core/main/default/objects/Account/fields/Method_of_Communication_with_Facility__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Communication_with_Facility__c</fullName>
    <description>Multi Piclkist what is the best communication with the facility.</description>
    <label>Method of Communication with Facility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Method_of_Communication_with_Facility</valueSetName>
    </valueSet>
</CustomField>