force-app/core/main/default/objects/Account/fields/Mila_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Mila_Case_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mila Case Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>