force-app/core/main/default/objects/Account/fields/Mila_Cell_Number__c.field-meta.xml
<CustomField>
    <fullName>Mila_Cell_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mila Cell Number</label>
    <type>Phone</type>
</CustomField>