force-app/core/main/default/objects/Account/fields/Mila_Mimit_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Mila_Mimit_Case_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mila Mimit Case Id</label>
    <type>Url</type>
</CustomField>