force-app/core/main/default/objects/Account/fields/MIMIT_Box_com_Weblink__c.field-meta.xml
<CustomField>
    <fullName>MIMIT_Box_com_Weblink__c</fullName>
    <description>MIMIT Box.com Link for companies / Dept</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>MIMIT Box.com Link for companies / Dept</inlineHelpText>
    <label>MIMIT Box.com Weblink</label>
    <type>Url</type>
</CustomField>