force-app/core/main/default/objects/Account/fields/MIMIT_EverNote_WebLink__c.field-meta.xml
<CustomField>
    <fullName>MIMIT_EverNote_WebLink__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MIMIT EverNote WebLink</label>
    <type>Url</type>
</CustomField>