force-app/core/main/default/objects/Account/fields/MIMIT_Locations__c.field-meta.xml
<CustomField>
    <fullName>MIMIT_Locations__c</fullName>
    <description>PREFERRED Locations of service where procedure, service, opportunity will be performed</description>
    <inlineHelpText>Please add the PREFERRED locations where this procedure will be performed</inlineHelpText>
    <label>MIMIT Locations_preferred</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hinsdale</fullName>
                <label>Hinsdale_12 Salt creek lane</label>
            </value>
            <value>
                <fullName>South Loop Clinic - 2415 S Michigan Ave</fullName>
            </value>
            <value>
                <fullName>Nursing home</fullName>
            </value>
            <value>
                <fullName>Home Visits</fullName>
            </value>
            <value>
                <fullName>Melrose Park_Gottlieb- POB #402</fullName>
            </value>
            <value>
                <fullName>Edgebrook</fullName>
            </value>
            <value>
                <fullName>The Breakers at Edgewater Beach</fullName>
            </value>
            <value>
                <fullName>Wood Dale, IL</fullName>
            </value>
            <value>
                <fullName>Jackson Park Hospital - Inpatient</fullName>
            </value>
            <value>
                <fullName>Jackson Park Hospital - Outpatient</fullName>
            </value>
            <value>
                <fullName>Loyola Gottlieb Hospital (Inpatient)</fullName>
            </value>
            <value>
                <fullName>Loyola Gottlieb Hospital (Outpatient)</fullName>
            </value>
            <value>
                <fullName>Rush Oak Park Hospital (inpatient)</fullName>
            </value>
            <value>
                <fullName>Rush Oak Park Hospital (Outpatient)</fullName>
            </value>
            <value>
                <fullName>Bannockburn_Stillwater</fullName>
            </value>
            <value>
                <fullName>Clark Street, North Chicago, IL , MIMIT</fullName>
            </value>
            <value>
                <fullName>DesPlaines_IL_MIMIT_Office</fullName>
            </value>
            <value>
                <fullName>Methodist Hospital of Chicago ( Bethany)</fullName>
            </value>
            <value>
                <fullName>OakBrook_Terrace</fullName>
            </value>
            <value>
                <fullName>South chicago_Hyde Park</fullName>
            </value>
            <value>
                <fullName>Edgewater Beach Foot and Ankle</fullName>
            </value>
            <value>
                <fullName>Glen Ellyn - 1186 Roosevelt Rd</fullName>
            </value>
            <value>
                <fullName>Des Plaines 9700 golf clinic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>