force-app/core/main/default/objects/Account/fields/MIMIT_MD__c.field-meta.xml
<CustomField>
    <fullName>MIMIT_MD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MIMIT MD</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (MIMIT MD)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>