force-app/core/main/default/objects/Account/fields/MIMIT_MD_User__c.field-meta.xml
<CustomField>
    <fullName>MIMIT_MD_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Physician User</description>
    <label>MIMIT MD User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>