force-app/core/main/default/objects/Account/fields/MIMIT_non_physician_provider__c.field-meta.xml
<CustomField>
    <fullName>MIMIT_non_physician_provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MIMIT non-physician provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (MIMIT non-physician provider)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>