force-app/core/main/default/objects/Account/fields/MIMIT_Service_line__c.field-meta.xml
<CustomField>
    <fullName>MIMIT_Service_line__c</fullName>
    <label>MIMIT Service line_main</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mimit_Serviceline</valueSetName>
    </valueSet>
</CustomField>