force-app/core/main/default/objects/Account/fields/MIMIT_status_at_helathcare_facility__c.field-meta.xml
<CustomField>
    <fullName>MIMIT_status_at_helathcare_facility__c</fullName>
    <description>Relationship between MIMIT and the Patient Healthcare facility</description>
    <label>MIMIT_relationship_healthcare_facility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contracted_for_payment</fullName>
            </value>
            <value>
                <fullName>Medical_Directorship</fullName>
            </value>
            <value>
                <fullName>MIMIT_Staff_NO_Credentials</fullName>
            </value>
            <value>
                <fullName>MIMIT_Staff_credential_Active</fullName>
            </value>
            <value>
                <fullName>MIMIT_Staff_credential_PENDING</fullName>
            </value>
            <value>
                <fullName>Non-Contracted_No_payment</fullName>
            </value>
            <value>
                <fullName>Referral_Source</fullName>
            </value>
            <value>
                <fullName>Partner with MIMIT</fullName>
            </value>
            <value>
                <fullName>Customer (have sent patients to MIMIT)</fullName>
                <label>Customer (Has referred Patients to MIMIT)</label>
            </value>
            <value>
                <fullName>MIMIT_Staff_Active</fullName>
            </value>
            <value>
                <fullName>MIMIT_Staff_Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>