force-app/core/main/default/objects/Account/fields/MIMIT_User_non_physician_provider__c.field-meta.xml
<CustomField>
    <fullName>MIMIT_User_non_physician_provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MIMIT User non-physician provider</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>