force-app/core/main/default/objects/Account/fields/No_Emergency_Contact_Available__c.field-meta.xml
<CustomField>
    <fullName>No_Emergency_Contact_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Emergency Contact Available</label>
    <type>Checkbox</type>
</CustomField>