force-app/core/main/default/objects/Account/fields/Non_Insurance_balance__c.field-meta.xml
<CustomField>
    <fullName>Non_Insurance_balance__c</fullName>
    <label>Non-Insurance balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>