force-app/core/main/default/objects/Account/fields/NOT_a_1099_Vendor__c.field-meta.xml
<CustomField>
    <fullName>NOT_a_1099_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if vendor should not receive a 1099</description>
    <label>NOT a 1099 Vendor</label>
    <type>Checkbox</type>
</CustomField>