force-app/core/main/default/objects/Account/fields/NPI_for_Helathcare_Organsizations__c.field-meta.xml
<CustomField>
    <fullName>NPI_for_Helathcare_Organsizations__c</fullName>
    <description>This is a NPI number for healthcare organizations. National Provider Identifier
you can look it up here - https://npiregistry.cms.hhs.gov/registry/?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is a NPI number for healthcare organizations. National Provider Identifier
you can look it up here - https://npiregistry.cms.hhs.gov/registry/?</inlineHelpText>
    <label>NPI for Helathcare Organsizations</label>
    <length>10</length>
    <type>Text</type>
</CustomField>