force-app/core/main/default/objects/Account/fields/Number_of_lower_extremity_wounds__c.field-meta.xml
<CustomField>
    <fullName>Number_of_lower_extremity_wounds__c</fullName>
    <label>Number of lower extremity wounds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>