force-app/core/main/default/objects/Account/fields/OBL_Patient__c.field-meta.xml
<CustomField>
    <fullName>OBL_Patient__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this an OBL Patient?</inlineHelpText>
    <label>OBL Patient</label>
    <type>Checkbox</type>
</CustomField>