force-app/core/main/default/objects/Account/fields/Opportunity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Start_Date__c</fullName>
    <description>Date and time the opportunity started</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please add the date and time the opportunity started</inlineHelpText>
    <label>Opportunity Start Date</label>
    <type>DateTime</type>
</CustomField>