force-app/core/main/default/objects/Account/fields/Our_Relation_with_Account__c.field-meta.xml
<CustomField>
    <fullName>Our_Relation_with_Account__c</fullName>
    <description>Relationship of the Account ( company or department) with our orgnaization</description>
    <inlineHelpText>Please pick one of the values to describe our relationship with this Account / company or department. e,g is this account a vendor for us ( we pay them for services. or a customer ( they pay us )</inlineHelpText>
    <label>Our_Relation with Account</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitior</fullName>
            </value>
            <value>
                <fullName>Customer_Existing</fullName>
                <label>Customer_existing</label>
            </value>
            <value>
                <fullName>Customer_potential</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Regulatory Agency</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Vendor_Active</fullName>
            </value>
            <value>
                <fullName>Vendor_past</fullName>
            </value>
            <value>
                <fullName>vendor_potential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>