force-app/core/main/default/objects/Account/fields/Out_Of_Network__c.field-meta.xml
<CustomField>
    <fullName>Out_Of_Network__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out Of Network</label>
    <type>Checkbox</type>
</CustomField>