force-app/core/main/default/objects/Account/fields/Outstanding_Balance1__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance1__c</fullName>
    <label>Outstanding Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>