force-app/core/main/default/objects/Account/fields/ownership_desc__c.field-meta.xml
<CustomField>
    <fullName>ownership_desc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ownership_desc</label>
    <length>254</length>
    <type>Text</type>
</CustomField>