force-app/core/main/default/objects/Account/fields/PADnet_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>PADnet_Site_ID__c</fullName>
    <label>PADnet Site ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PADnet_site_ID</valueSetName>
    </valueSet>
</CustomField>