force-app/core/main/default/objects/Account/fields/Patient_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Patient_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>