force-app/core/main/default/objects/Account/fields/Patient_Balance1__c.field-meta.xml
<CustomField>
    <fullName>Patient_Balance1__c</fullName>
    <label>Patient Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>