force-app/core/main/default/objects/Account/fields/Patient_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Patient_Diagnosis__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Diagnosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>