force-app/core/main/default/objects/Account/fields/Patient_Identifier_List__c.field-meta.xml
<CustomField>
    <fullName>Patient_Identifier_List__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Identifier List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>