force-app/core/main/default/objects/Account/fields/Patient_Image__c.field-meta.xml
<CustomField>
    <fullName>Patient_Image__c</fullName>
    <description>Patient image</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Upload Patient image</inlineHelpText>
    <label>Patient Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>