force-app/core/main/default/objects/Account/fields/Patient_Residing_At__c.field-meta.xml
<CustomField>
    <fullName>Patient_Residing_At__c</fullName>
    <label>Patient Residing At</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Nursing Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>