force-app/core/main/default/objects/Account/fields/Patient_Stage__c.field-meta.xml
<CustomField>
    <fullName>Patient_Stage__c</fullName>
    <label>Patient Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pt-Existing - New Problem</fullName>
            </value>
            <value>
                <fullName>Patient is scheduled for Consult</fullName>
            </value>
            <value>
                <fullName>Patient will think about it and decide</fullName>
            </value>
            <value>
                <fullName>Patient evaluation and consult pending</fullName>
            </value>
            <value>
                <fullName>Patient awaiting self pay proposal</fullName>
            </value>
            <value>
                <fullName>Patient SelfPay proposal negotiation</fullName>
            </value>
            <value>
                <fullName>Patient to be Scheduled for procedure</fullName>
            </value>
            <value>
                <fullName>patient SCHEDULED for procedure</fullName>
                <label>Patient SCHEDULED for procedure</label>
            </value>
            <value>
                <fullName>Patient to be Rescheduled</fullName>
            </value>
            <value>
                <fullName>Patient Follow Up</fullName>
            </value>
            <value>
                <fullName>Surveillance</fullName>
            </value>
            <value>
                <fullName>Patient new referral with a problem</fullName>
            </value>
            <value>
                <fullName>procedure (Opp) completed</fullName>
                <label>Procedure (Opp) completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>