force-app/core/main/default/objects/Account/fields/Patient_Status__c.field-meta.xml
<CustomField>
    <fullName>Patient_Status__c</fullName>
    <description>Patient Status and Description</description>
    <label>Patient Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$</fullName>
            </value>
            <value>
                <fullName>Completed Cosmetic</fullName>
            </value>
            <value>
                <fullName>Completed Groupon</fullName>
            </value>
            <value>
                <fullName>Compression Stockings</fullName>
            </value>
            <value>
                <fullName>Do Not Call</fullName>
            </value>
            <value>
                <fullName>Groupon Converted Ablation</fullName>
            </value>
            <value>
                <fullName>Groupon Converted Cosmetic</fullName>
            </value>
            <value>
                <fullName>Groupon Only</fullName>
            </value>
            <value>
                <fullName>Not Scheduled</fullName>
            </value>
            <value>
                <fullName>Photos NEEDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>