force-app/core/main/default/objects/Account/fields/Patient_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>Patient_Update_Status__c</fullName>
    <description>Please choose the correct status of if this patient has been updated in the database</description>
    <inlineHelpText>Please choose the correct status of if this patient has been updated in the database</inlineHelpText>
    <label>Patient Record Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Verified</fullName>
            </value>
            <value>
                <fullName>Verification in process</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>