force-app/core/main/default/objects/Account/fields/Payable_Process__c.field-meta.xml
<CustomField>
    <fullName>Payable_Process__c</fullName>
    <label>Payable Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payable to be processed through Purchase order</fullName>
            </value>
            <value>
                <fullName>Payable can be processed through AP case.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>