force-app/core/main/default/objects/Account/fields/Payer_ID_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Payer_ID_Eligibility__c</fullName>
    <description>Payer ID Code as per Optum (not  advancedMD), using it for Eligibility Checker</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Payer ID Code as per Optum, using it for Eligibility Checker. You can check the Payer ID Codes from this article - https://mimit.lightning.force.com/lightning/r/Knowledge__kav/ka0Ua0000007MAHIA2/view</inlineHelpText>
    <label>Payer ID - Eligibility</label>
    <length>20</length>
    <type>Text</type>
</CustomField>