force-app/core/main/default/objects/Account/fields/Payment_Account__c.field-meta.xml
<CustomField>
    <fullName>Payment_Account__c</fullName>
    <label>Payment Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Account</valueSetName>
    </valueSet>
</CustomField>