force-app/core/main/default/objects/Account/fields/Payment_method_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Payment_method_Preferred__c</fullName>
    <description>preferred method of payment to the Company</description>
    <label>Payment method Preferred</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_method</valueSetName>
    </valueSet>
</CustomField>