force-app/core/main/default/objects/Account/fields/Payment_terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_terms__c</fullName>
    <description>payment terms with Account</description>
    <label>Payment terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>payment_terms</valueSetName>
    </valueSet>
</CustomField>