force-app/core/main/default/objects/Account/fields/Person_Account_Mobile_Back_End__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Mobile_Back_End__c</fullName>
    <formula>SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(PersonMobilePhone, &quot;(&quot;, &quot;&quot;),
&quot;)&quot;, &quot;&quot;),
&quot;-&quot;, &quot;&quot;),
&quot; &quot;, &quot;&quot;),
&quot;+&quot;, &quot;&quot;),
&quot;.&quot;, &quot;&quot;),
&quot;ext&quot;, &quot;&quot;),
&quot;Ext&quot;, &quot;&quot;),
&quot;x&quot;, &quot;&quot;),
&quot;x.&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Account Mobile (Back End)</label>
    <type>Text</type>
</CustomField>