force-app/core/main/default/objects/Account/fields/Person_Contact_Id_18_char__c.field-meta.xml
<CustomField>
    <fullName>Person_Contact_Id_18_char__c</fullName>
    <formula>CASESAFEID( PersonContact.Id )</formula>
    <label>Person Contact Id (18 char)</label>
    <type>Text</type>
</CustomField>