force-app/core/main/default/objects/Account/fields/Phone_Back_End__c.field-meta.xml
<CustomField>
    <fullName>Phone_Back_End__c</fullName>
    <description>this is backend field used in the agentforce flow</description>
    <formula>SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;),
&quot;)&quot;, &quot;&quot;),
&quot;-&quot;, &quot;&quot;),
&quot; &quot;, &quot;&quot;),
&quot;+&quot;, &quot;&quot;),
&quot;.&quot;, &quot;&quot;),
&quot;ext&quot;, &quot;&quot;),
&quot;Ext&quot;, &quot;&quot;),
&quot;x&quot;, &quot;&quot;),
&quot;x.&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Back End</label>
    <type>Text</type>
</CustomField>