force-app/core/main/default/objects/Account/fields/Potential_Schedule_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Potential_Schedule_Date_and_Time__c</fullName>
    <description>This field is the possible date and time that this opportunity could occur. Example: the possible date and time that a procedure should be done</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Potential Schedule Date and Time</label>
    <type>DateTime</type>
</CustomField>