force-app/core/main/default/objects/Account/fields/Practice_Work_Setting__c.field-meta.xml
<CustomField>
    <fullName>Practice_Work_Setting__c</fullName>
    <description>Practice Work Setting</description>
    <label>Practice Work Setting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Healthcare organization</fullName>
            </value>
            <value>
                <fullName>Multispecialty group private practice</fullName>
            </value>
            <value>
                <fullName>Single specialty Group private practice</fullName>
            </value>
            <value>
                <fullName>Solo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>