force-app/core/main/default/objects/Account/fields/predefined__c.field-meta.xml
<CustomField>
    <fullName>predefined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>predefined</label>
    <type>Checkbox</type>
</CustomField>