force-app/core/main/default/objects/Account/fields/Preferred_Communication_Channel__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Communication_Channel__c</fullName>
    <label>Preferred Communication Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Preferred_Communication_Channel</valueSetName>
    </valueSet>
</CustomField>